--- a/reactjs/src/components/Header/index.less
+++ b/reactjs/src/components/Header/index.less
@@ -45,7 +45,10 @@
 }
 
 .header-container {
-  -webkit-box-shadow: 0px 6px 50px -18px rgba(0, 0, 0, 0.81);
-  -moz-box-shadow: 0px 6px 50px -18px rgba(0, 0, 0, 0.81);
-  box-shadow: 0px 6px 50px -18px rgba(0, 0, 0, 0.81);
+  -webkit-box-shadow: 0px 5px 10px -18px rgba(0, 0, 0, 0.81);
+  -moz-box-shadow: 0px 5px 10px -18px rgba(0, 0, 0, 0.81);
+  box-shadow: 0px 5px 10px -18px rgba(0, 0, 0, 0.81);
+  // position: fix;
+  display: flex;
+  justify-content: space-between;
 }
