--- a/reactjs/src/app/shared/components/Header/index.less
+++ b/reactjs/src/app/shared/components/Header/index.less
@@ -44,11 +44,15 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 3px 10px 30px 3px rgba(0, 0, 0, 0.19);
 }
 
-.header-container {
+.header-nav-container {
   -webkit-box-shadow: 0px 5px 10px -18px rgba(0, 0, 0, 0.81);
   -moz-box-shadow: 0px 5px 10px -18px rgba(0, 0, 0, 0.81);
   box-shadow: 0px 5px 10px -18px rgba(0, 0, 0, 0.81);
   // position: fix;
   display: flex;
   justify-content: space-between;
+}
+
+.header{
+  
 }
