--- a/reactjs/src/app/shared/components/Header/index.less
+++ b/reactjs/src/app/shared/components/Header/index.less
@@ -48,11 +48,23 @@
   -webkit-box-shadow: 0px 5px 10px -18px rgba(0, 0, 0, 0.81);
   -moz-box-shadow: 0px 5px 10px -18px rgba(0, 0, 0, 0.81);
   box-shadow: 0px 5px 10px -18px rgba(0, 0, 0, 0.81);
-  // position: fix;
-  display: flex;
+  height: fit-content;
   justify-content: space-between;
+  background: white;
 }
 
-.header{
-  
+.header {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px #c4c4c4 solid;
+  align-items: center;
+  padding: 5px;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  line-height: 100%;
+
 }
